# data_insights

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md
backend/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/endpoints/: chart.py  data.py  export.py  session.py  upload.py
backend/app/core/: config.py  exceptions.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py
backend/app/services/chart_generator/: __init__.py
backend/app/services/data_processor/: __init__.py  converters.py  dto.py
backend/app/services/export_service/: __init__.py
backend/app/services/session_manager/: __init__.py  dto.py
backend/app/services/statistics_calculator/: __init__.py
backend/tests/: conftest.py  test_config.py  test_main.py
backend/utils/: __init__.py  helpers.py
frontend/: .gitignore  .prettierignore  .prettierrc  .stylelintrc.json  README.md  eslint.config.cjs  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/Chart/: ChartViewer.tsx  styles.less
frontend/src/components/Toolbar/: Toolbar.tsx  styles.less
frontend/src/components/Upload/: FileUploader.tsx  styles.less
frontend/src/hooks/: useChart.ts  useExport.ts  useSession.ts
frontend/src/services/: api.ts  config.ts
frontend/src/store/: hooks.ts  index.ts
frontend/src/store/slices/: chartSlice.ts  sessionSlice.ts  uiSlice.ts
frontend/src/styles/: global.less
frontend/src/styles/mixins/: flex.less  index.less  responsive.less
frontend/src/styles/variables/: colors.less  index.less  sizes.less
frontend/src/types/: api.types.ts  chart.types.ts
