[build-system]
requires = ["poetry-core>=2.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "data-insights-backend"
version = "0.1.0"
description = "Backend for Data Insights application"
authors = ["Tania Marokina <tania.marokina@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = { extras = ["standard"], version = "^0.24.0" }
pandas = "^2.1.3"
numpy = "^1.26.2"
plotly = "^6.5.0"
python-multipart = "^0.0.6"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
kaleido = "0.2.1"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
mypy = "^1.7.1"
pre-commit = "^4.5.0"
httpx = "^0.25.2"
pandas-stubs = "^2.1.1.230928"
ruff = "^0.6.0"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".git", "__pycache__", ".venv", "build", "dist"]
src = ["app", "tests"]

[tool.ruff.lint]
select = ["ARG", "F", "E", "W", "N", "I", "B", "C4", "COM", "UP"]
ignore = [
  "E203",
  "N818",
  "B028",
  "B905",
  "B904",
  "COM812",
  "ANN401",
  "ANN002",
  "ANN003",
  "C401",
  "C408",
  "C417",
  "B008",
  "F841",
  "B010",
  "C420",
  "UP042",
  "UP031",
  "UP032",
  "ARG001",
  "ARG004",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["plotly.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --strict-markers"
markers = [
  "slow: marks tests as slow",
  "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == '__main__':",
  "if TYPE_CHECKING:",
]
